--- a/stamp-collection/index.html
+++ b/stamp-collection/index.html
@@ -20,7 +20,7 @@
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
-    <script src="stamp-collection/sketch.js"></script>
+    <script src="sketch.js"></script>
 </head>
 
 <body>
