--- a/stamp-collection/index.html
+++ b/stamp-collection/index.html
@@ -20,6 +20,7 @@
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/comfy.js@latest/dist/comfy.min.js"></script>
     <script src="sketch.js"></script>
 </head>
 
